# Stats_Model

./: LICENSE  Makefile  README.md  SetYouUp.ipynb  pyproject.toml
notebooks/: main.ipynb
stats_model/: __init__.py  dataset.py  features.py  plots.py
stats_model/modeling/: predict.py  train.py
